Add kontakt.html and zamow.html

--- a/Projekt_01/index.html
+++ b/Projekt_01/index.html
@@ -16,10 +16,10 @@
       }
     </style>
   </head>
-  <body data-bs-theme="light">
+  <body data-bs-theme="dark">
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">EcoTherm</a>
+        <a class="navbar-brand" href="index.html">EcoTherm</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/kontakt.html">Kontakt</a>
+              <a class="nav-link" href="kontakt.html">Kontakt</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/zamow.html">Zamów</a>
+              <a class="nav-link" href="zamow.html">Zamów</a>
             </li>
           </ul>
         </div>
@@ -47,8 +47,8 @@
       <article class="container-fluid p-5">
         <div class="row">
           <img
-            class="col-12 col-md-3 rounded img-fluid"
-            src="/kubek.webp"
+            class="col-12 col-md-3 rounded-3 img-fluid"
+            src="kubek.webp"
             alt="kubek"
           />
           <div class="col-12 col-md-9 p-2">
@@ -92,8 +92,8 @@
       <article class="container-fluid p-5">
         <div class="row">
           <img
-            class="col-12 col-md-3 rounded img-fluid"
-            src="/kubek_2.webp"
+            class="col-12 col-md-3 rounded-3 img-fluid"
+            src="kubek_2.webp"
             alt="kubek"
           />
           <div class="col-12 col-md-9 p-2">
@@ -137,7 +137,7 @@
         <div id="opinionsCarousel" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="row mx-5">
+              <div class="row mx-5 rounded-3 p-3">
                 <img src="anna.jpg" class="col-2 circle img-fluid" alt="Anna" />
                 <div class="col-10">
                   <p>
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row mx-5">
+              <div class="row mx-5 rounded-3 p-3"">
                 <img
                   src="piotr.jpg"
                   class="col-2 circle img-fluid"
@@ -214,10 +214,10 @@
         </p>
         </ul>
       </article>
-      <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 EcoTherm sp. z.o.o. All Rights Reserved.</p>
-      </footer>
     </main>
+    <footer class="bg-dark text-white text-center py-4">
+      <p>&copy; 2024 EcoTherm sp. z.o.o. All Rights Reserved.</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
