--- a/Projekt_01/index.html
+++ b/Projekt_01/index.html
@@ -110,7 +110,7 @@
         </div>
       </article>
       <article class="container-fluid p-5">
-        <h3>Dlaczego warto wybrać EcoTherm Smart Mug?</h3>
+        <h3>Kluczowe cechy</h3>
         <ul>
           <li>
             <strong>Technologia regulacji temperatury</strong> - Utrzymuj
@@ -132,7 +132,7 @@
           </li>
         </ul>
       </article>
-      <article class="container-fluid p-5">
+      <article class="container-fluid p-5 d-none d-md-block">
         <h3>Opinie naszych klientów</h3>
         <div id="opinionsCarousel" class="carousel slide">
           <div class="carousel-inner">
