Fix contact padding on small screens

--- a/Projekt_01/kontakt.html
+++ b/Projekt_01/kontakt.html
@@ -50,7 +50,7 @@
     <main class="container-fluid p-5">
       <div class="row">
         <div id="map" class="col-12 col-md-4 rounded-md"></div>
-        <div class="col-12 col-md-8 px-5">
+        <div class="col-12 col-md-8 p-5 py-md-0">
           <h3>Kontakt</h3>
           <p>Adres: Kawiory 21, 30-055 Kraków</p>
           <p>Nr telefonu: +48 111 222 333</p>
